src/pages/scrollbar/index.module.css
/* https://developer.mozilla.org/en-US/docs/Web/CSS/::-webkit-scrollbar */

/* FIXME: @property not working when style in shadowdom */
@property --scrollbar-thumb-color {
  syntax: "<color>";
  inherits: true;
  initial-value: white;
}

@property --scrollbar-thumb-border {
  syntax: "<length>";
  inherits: true;
  initial-value: 0px;
}

.scrollbar {
  --scrollbar-size: 10px;
  --track-bg: oklab(100% 0 0 / 0.05);
  --thumb-bg: oklch(100% 0 0 / 0.2);
  --thumb-bg-active: oklch(100% 0 0 / 0.5);
}

@supports selector(::-webkit-scrollbar-thumb) {
  .scrollbar {
    --scrollbar-thumb-color: transparent;
    --scrollbar-thumb-border: 3px;

    transition: --scrollbar-thumb-color .2s ease,
      --scrollbar-thumb-border .2s ease;

    &:hover,
    &:active,
    &:focus,
    &:focus-within {
      --scrollbar-thumb-color: var(--thumb-bg);
    }

    &::-webkit-scrollbar {
      width: var(--scrollbar-size);
      height: var(--scrollbar-size);
      background-color: transparent;
    }

    &::-webkit-scrollbar-thumb {
      background-color: var(--scrollbar-thumb-color);
      background-clip: padding-box;
      border-radius: var(--scrollbar-size) / calc(var(--scrollbar-size) - (var(--scrollbar-thumb-border) * 2));

      border-block-width: 0px;
      border-inline-width: var(--scrollbar-thumb-border);
      border-style: solid;
      border-color: transparent;
    }

    &::-webkit-scrollbar-thumb:horizontal {
      border-block-width: var(--scrollbar-thumb-border);
      border-inline-width: 0px;
      border-radius: calc(var(--scrollbar-size) - (var(--scrollbar-thumb-border) * 2)) / var(--scrollbar-size);
    }

    &::-webkit-scrollbar-thumb:hover,
    &::-webkit-scrollbar-thumb:active {
      --scrollbar-thumb-border: 1px;
      --scrollbar-thumb-color: var(--thumb-bg-active);
    }


    &::-webkit-scrollbar-track {
      /* border-radius - scrollbar-size / 2 */
      margin: calc(24px - var(--scrollbar-size) / 2);
      border-radius: 9999px;
      background-color: var(--track-bg);
    }

    &::-webkit-scrollbar-button,
    &::-webkit-scrollbar-corner {
      display: none;
    }
  }
}

@supports not selector(::-webkit-scrollbar-thumb) {
  .scrollbar {
    scrollbar-width: thin;
    scrollbar-color: transparent var(--track-bg);
    scrollbar-arrow-color: red;

    transition-property: scrollbar-color;
    transition-duration: 0.2s;
    transition-timing-function: ease;

    &:hover,
    &:active,
    &:focus,
    &:focus-within {
      scrollbar-color: var(--thumb-bg) var(--track-bg);
    }
  }
}

